# marimo-dashboard

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: exceptions.py  middleware.py  router.py
app/notebooks/: app1.py  app2.py
app/templates/: home.html
app/utilities/: files.py  users.py
