[project]
name = "marimo-dashboard"
version = "0.1.0"
description = "An example project hosting Marimo notebooks as apps behind an ASGI webserver."
authors = [
    {name = "Leo Sharer", email = "leo_sharer@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "marimo (>=0.14.13,<0.15.0)",
    "starlette (>=0.47.2,<0.48.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
ty = "^0.0.1a16"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = [
    ".vscode",
    "__pycache__"
]
markers = [
    "slow: lower-importance tests that take an excessive amount of time",
]
